force-app/main/default/objects/nFORCE__Language__c/nFORCE__Language__c.object-meta.xml
<CustomObject>
    <label>Language</label>
    <nameField>
        <label>Language Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Languages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>