force-app/main/default/objects/nFORCE__Language__c/fields/nFORCE__Flag_Image__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Flag_Image__c</fullName>
    <description>This field contains the URL for the hosted image that appears next to the language in the language selection tool of the Customer Engagement Solution.</description>
    <label>Flag Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>