force-app/main/default/objects/nFORCE__Language__c/fields/nFORCE__Locale_Key__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Locale_Key__c</fullName>
    <description>This field stores the optional LocaleSidKey to map selection of the language to a particular locale (ex. en_US).</description>
    <inlineHelpText>Enter an optional locale key to map selection of this language to a specific locale.</inlineHelpText>
    <label>Locale Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>